--- a/config.toml
+++ b/config.toml
@@ -22,7 +22,7 @@ title = "Welcome to Kidd & Kidd CPAs"
     mobile_height = "36px"
     desktop = "images/logo/logo.jpg"
     desktop_height = "36px"
-    alt = "Kidd and Kidd CPA"
+    alt = "Kidd and Kidd CPAs"
 
   [params.fonts]
     # sets the google font link in layouts/partials/google-fonts.html
