--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://spudmillions.github.io/new_kidd/"
+baseURL = "https://spudmillions.github.io/kiddandkiddcpa.com/"
 themesDir = "themes"
 theme = "hugo-serif-theme"
 languageCode = "en-us"
