--- a/config.toml
+++ b/config.toml
@@ -72,16 +72,23 @@ title = "Welcome to Kidd & Kidd CPAs"
       blank = false
 
   [[menu.main]]
+    name = "Pricing"
+    url = "/pricing/"
+    weight = 4
+    [menu.main.params]
+      blank = false
+
+  [[menu.main]]
     name = "Book An Appointment"
     url = "https://calendly.com/markkidd/60min"
-    weight = 4
+    weight = 5
     [menu.main.params]
       blank = true
 
   [[menu.main]]
     name = "Client Portal"
     url = "https://onvio.us/clientcenter/en/us/auth?r=%2Fhome"
-    weight = 5
+    weight = 6
     [menu.main.params]
       blank = true
 
